Fix header z-index

--- a/render/base.scss
+++ b/render/base.scss
@@ -15,7 +15,7 @@ $contentPadding: 1em;
 	padding: 0;
 	margin: 0;
 	backdrop-filter: blur(5px);
-	z-index: 99;
+	z-index: 9999;
 	text-align: center;
 }
 @mixin header {
